tests/baselines/reference/classInheritance.errors.txt
tests/cases/compiler/classInheritance.ts(2,7): error TS2506: 'A' is referenced directly or indirectly in its own base expression.


==== tests/cases/compiler/classInheritance.ts (1 errors) ====
    class B extends A { }
    class A extends A { }
          ~
!!! error TS2506: 'A' is referenced directly or indirectly in its own base expression.